[Front] en angular 5 qui marche bien + mise en place du back: inscription+login

--- a/GGHB/src/app/app.component.html
+++ b/GGHB/src/app/app.component.html
@@ -11,6 +11,10 @@ crossorigin="anonymous"></script>
 
 </head>
 
+<body ng-controller="myCtrl">
+    
+       
+   </body>
 
 <router-outlet></router-outlet>
 
