--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -43,7 +43,7 @@
   <br/><br/>
   
   <div class="container" align="Left">
-   <form class="cproject" action="/createProject" method="POST">
+   <form class="cproject" action="http://localhost:3000/createProject" method="POST">
     <div class="form-group">
       <label for="projectName">Name</label>
       <input type="text" class="form-control" name="name" placeholder="Enter the name of project" required>
