--- a/GGHB/src/app/createUs/create-us.component.html
+++ b/GGHB/src/app/createUs/create-us.component.html
@@ -14,13 +14,13 @@
 
         <ul class="navbar-nav nav">
 
-          <li class='active' >
-            <a href="#/">Home</a>
-          </li>
-
-          <li >
-            <a href="#about">About</a>
-          </li>
+            <li class='active' >
+                <a class="nav-link" routerLink="/home">Home</a>
+              </li>
+      
+              <li >
+                <a class="nav-link" routerLink="/about">About</a>
+              </li>
 
       </ul>
 
