--- a/GGHB/src/app/project/project.component.html
+++ b/GGHB/src/app/project/project.component.html
@@ -14,11 +14,11 @@
         <ul class="navbar-nav nav">
   
           <li class='active' >
-            <a href="#/">Home</a>
+            <a class="nav-link" routerLink="/home">Home</a>
           </li>
   
           <li >
-            <a href="#about">About</a>
+            <a class="nav-link" routerLink="/about">About</a>
           </li>
   
       </ul>
