invitation à un projet fonctionnelle

--- a/GGHB/src/app/invite-project/invite-project.component.html
+++ b/GGHB/src/app/invite-project/invite-project.component.html
@@ -44,7 +44,7 @@
 
 <div class="container" align="left">
   <h1>Invite A Contributor To The Current Project</h1>
-   <form class="cproject" action="http://localhost:3000/inviteProject" method="POST">
+   <form class="cproject" action="http://localhost:3000/invited" method="POST">
     <div class="form-group">
       <label for="contributor">Name</label>
       <input type="text" class="form-control" name="name" placeholder="Enter a contributor name" required>
