--- a/GGHB/src/app/home/home.component.html
+++ b/GGHB/src/app/home/home.component.html
@@ -1,69 +1,59 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container" ng-app="myApp">
-    <div class="navbar-header">
-      <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      <a class="navbar-brand"><i class="fa fa-home" aria-hidden="true"></i></a>
-      <a class="navbar-brand">Team GGHB</a>
-    </div>
-    <div class="navbar-collapse collapse">
+<div class="container py-3">
+  <div class="row">
+      <div class="col-md-6 col-lg-4 mx-auto">
+          <div class="card card-body">
+              <h3 class="text-center mb-4">Create an account</h3>
+              <form class="formGroup"
+                    novalidate
+                    [formGroup]="signUpForm">
+                  <div class="form-group">
+                      <div class="form-group">
+                          <input type="text"
+                                 name="userName"
+                                 class="form-control"
+                                 placeholder="User Name"
+                                 formControlName="userName"/>
+                      </div>
+                      <div *ngIf="userName.invalid && userName.touched"
+                           class="text-danger">
+                          <div *ngIf="userName.errors.required">
+                              User Name is required for registration
+                          </div>
+                      </div>
+                  </div>
 
-      <ul class="navbar-nav nav">
+                  <div class="form-group">
+                      <input type="password"
+                             name="password"
+                             class="form-control"
+                             placeholder="Password"
+                             formControlName="password"/>
+                  </div>
 
-        <li class='active' >
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
+                  <div class="form-group">
+                      <input type="password"
+                             name="confirmPassword"
+                             class="form-control"
+                             placeholder="Confirm Password"
+                             formControlName="confirmPassword"/>
+                  </div>
 
-        <li >
-          <a class="nav-link" routerLink="/about">About</a>
-        </li>
-
-    </ul>
-
-  <ul class="navbar-text navbar-right">
-
-    <form class="form-inline" action="http://localhost:3000/login" method="POST">
-      <div class="form-group" ng-controller="myCtrl">
-        <label>UserName:</label>
-        <input type="text" ng-model="username_co" placeholder="Enter your UserName" class="form-control" name="username_co" required>
-
-        <label>Password:</label>
-        <input type="password" ng-model="password_co" placeholder="Enter your password" class="form-control" name="password_co" required>
-      
-      <button ng-click="login" class="btn btn-primary">Sign In</button>
+                  <div align="center">
+                      <button class="btn btn-success"
+                              type="submit"
+                              name="createAccount"
+                              (click)="submitSignUpForm()">
+                          Sign Up
+                      </button>
+                      <button class="btn btn-danger"
+                              type="reset"
+                              name="reset"
+                              (click)="reset()">
+                          Reset
+                      </button>
+                  </div>
+              </form>
+          </div>
       </div>
-    </form> 
-  </ul>
-</div>
-</div>
-</nav>
-
-
-<form class="signUp" action="http://localhost:3000/register" method="POST">
-  <div class="container1" align="Center">
-    
-      <br/><br/><br/>
-      
-        <h2>Create an account</h2>
-        <div class="form-group">
-          <label for="UserName">User Name:</label>
-          <input type="text" placeholder="Enter UserName" class="form-control" name="username" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" placeholder="Enter Password" class="form-control" name="password" required>
-        </div>
-  
-        <div class="form-group">
-          <label for="confirmPassword">Repeat Password:</label>
-          <input type="password" placeholder="Repeat Password" class="form-control" name="rpassword" required>
-        </div>
-    
-        <button ng-click="register" type="submit" class="btn btn-default">Sign up</button>
-        <button type="reset" class="btn btn-default">Reset</button>
   </div>
-</form>
+</div>
