--- a/GGHB/src/app/home/home.component.html
+++ b/GGHB/src/app/home/home.component.html
@@ -8,21 +8,27 @@
                     [formGroup]="signUpForm">
                   <div class="form-group">
                       <div class="form-group">
+                        <div *ngIf="userName.invalid && userName.touched"
+                            class="text-danger">
+                           <div *ngIf="userName.errors.required">
+                               UserName is required for registration
+                           </div>
+                       </div>                          
                           <input type="text"
                                  name="userName"
                                  class="form-control"
                                  placeholder="User Name"
                                  formControlName="userName"/>
                       </div>
-                      <div *ngIf="userName.invalid && userName.touched"
-                           class="text-danger">
-                          <div *ngIf="userName.errors.required">
-                              User Name is required for registration
-                          </div>
-                      </div>
                   </div>
 
                   <div class="form-group">
+                    <div *ngIf="password.invalid && password.touched"
+                    class="text-danger">
+                        <div *ngIf="password.errors.required">
+                            Password is required for registration
+                        </div>
+                    </div>
                       <input type="password"
                              name="password"
                              class="form-control"
@@ -31,6 +37,12 @@
                   </div>
 
                   <div class="form-group">
+                    <div *ngIf="confirmPassword.invalid && confirmPassword.touched"
+                    class="text-danger">
+                        <div *ngIf="confirmPassword.errors.required">
+                            You must Confirm your password
+                        </div>
+                    </div>
                       <input type="password"
                              name="confirmPassword"
                              class="form-control"
