Creation d'un projet qui marche + modification bd

--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -37,13 +37,13 @@
 
 
                   <div align="center">
-                      <button class="btn btn-success"
+                      <button class="btn btn-primary btn-sm"
                               type="submit"
                               name="createProject"
-                              (click)="submitcreateProjectForm()">
-                          Sign Up
+                              (click)="submitCreateProjectForm()">
+                          Create Project
                       </button>
-                      <button class="btn btn-danger"
+                      <button class="btn btn-secondary btn-sm"
                               type="reset"
                               name="reset"
                               (click)="reset()">
