--- a/GGHB/src/app/home/home.component.html
+++ b/GGHB/src/app/home/home.component.html
@@ -51,13 +51,13 @@
                   </div>
 
                   <div align="center">
-                      <button class="btn btn-success"
+                      <button class="btn btn-primary btn-lg"
                               type="submit"
                               name="createAccount"
                               (click)="submitSignUpForm()">
                           Sign Up
                       </button>
-                      <button class="btn btn-danger"
+                      <button class="btn btn-secondary btn-lg"
                               type="reset"
                               name="reset"
                               (click)="reset()">
