--- a/GGHB/src/app/listProjects/listProjects.component.html
+++ b/GGHB/src/app/listProjects/listProjects.component.html
@@ -1,3 +1,18 @@
-<p>
-  list-projects works!
-</p>
+<div class="container" align="Center">
+<button class="btn btn-default" type="submit" name="createNewProject" routerLink="/createProject">
+    Create a new project
+    </button>
+</div>
+
+<div class="container" align="Center">
+  <table class="table table-bordered">
+
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+
+      </tr>
+    </thead>
+  </table>
