--- a/GGHB/src/app/create-sprint/create-sprint.component.html
+++ b/GGHB/src/app/create-sprint/create-sprint.component.html
@@ -1,3 +1,63 @@
-<p>
-  create-sprint works!
-</p>
+<div class="container py-3">
+  <h2>Create a Sprint</h2>
+  <form class="formGroup"
+        novalidate
+        [formGroup]="createSprintForm">
+    <div class="form-group">
+      <div class="form-group">
+        <input type="text"
+               name="projectName"
+               id="projectName"
+               class="form-control"
+               placeholder="Project Name"
+               formControlName="projectName"/>
+      </div>
+      <div *ngIf="projectName.invalid && projectName.touched"
+           class="text-danger">
+        Project Name is required
+      </div>
+      <div class="form-group">
+        <div class="form-group">
+          <input type="text"
+                 name="sprintName"
+                 id="sprintName"
+                 class="form-control"
+                 placeholder="Sprint Name"
+                 formControlName="sprintName"/>
+        </div>
+        <div *ngIf="sprintName.invalid && sprintName.touched"
+             class="text-danger">
+          Sprint Name is required
+        </div>
+        <div class="form-group">
+          <div class="form-group">
+            <input type="date"
+                   name="date_begin"
+                   id="date_begin"
+                   class="form-control"
+                   placeholder="Begin Date"
+                   formControlName="date_begin"/>
+          </div>
+          <div *ngIf="dateBegin.invalid && dateBegin.touched"
+               class="text-danger">
+            Begin Date is required
+          </div>
+          <div class="form-group">
+            <div class="form-group">
+              <input type="date"
+                     name="date_end"
+                     id="date_end"
+                     class="form-control"
+                     placeholder="End Date"
+                     formControlName="date_end"/>
+            </div>
+            <div *ngIf="dateEnd.invalid && dateEnd.touched"
+                 class="text-danger">
+              End Date is required
+            </div>
+            <button type="submit" class="btn btn-default" (click)="submitCreateSprintForm()"> Save</button>
+            <button type="reset" class="btn btn-default">Reset</button>
+          </div>
+  </form>
+</div>
+
