--- a/GGHB/src/app/create-us/create-us.component.html
+++ b/GGHB/src/app/create-us/create-us.component.html
@@ -69,7 +69,7 @@
                       <button class="btn btn-primary btn-sm"
                               type="submit"
                               name="createUs"
-                              (click)="submitCreateUsForm()">
+                              (click)="submitCreateUsForm()" routerLink="/project">
                           Create Project
                       </button>
                       <button class="btn btn-secondary btn-sm"
