--- a/GGHB/src/app/project/project.component.html
+++ b/GGHB/src/app/project/project.component.html
@@ -1,3 +1,36 @@
-<p>
-  project works!
-</p>
+<br/>
+<br/>
+<div class="container" align="Center">
+<button class="btn btn-default" type="submit" name="createNewUs" routerLink="/createUs">
+    Create a new us
+    </button>
+</div>
+<br/>
+<div class="container" align="Center">
+  <table class="table table-bordered">
+
+    <thead class="thead-dark">
+      <tr>
+ <th scope="col">#</th>
+ <th scope="col">Description</th>
+ <th scope="col">Difficulty</th>
+ <th scope="col">Priority</th>
+ <th scope="col">State</th>
+ <th scope="col">Action</th>
+     </tr>
+   </thead>
+   <tbody>
+    <tr *ngFor="let us of projects">
+   <td>{{us.id}} </td>
+   <td> {{us.description}}</td>
+     <td>{{us.difficult}}</td>
+   <td>{{us.priority}}</td>
+   <td>{{us.state}}</td>
+   <td><button type="button" class="btn btn-secondary" *ngIf='!us.onEdit' (click)="updateUS()">Update</button>
+     <button type="button" class="btn btn-secondary" *ngIf='!us.onEdit' (confirmed-click)="onSelectToDelete(us.id)"
+     ng-confirm-click="Would you delete this us?">Delete</button>
+     <!--button type="button" class="btn btn-secondary" *ngIf='!us.onEdit' (click)="deleteUS(us.id)" >Delete</button-->
+   </td>
+ </tr>
+ </tbody>
+  </table>
