changement nom userName en username_inv

--- a/GGHB/src/app/invite-to-project/invite-to-project.component.html
+++ b/GGHB/src/app/invite-to-project/invite-to-project.component.html
@@ -19,13 +19,13 @@
       <div class="form-group">
         <div class="form-group">
           <input type="text"
-                 name="userName"
-                 id="userName"
+                 name="username_inv"
+                 id="username_inv"
                  class="form-control"
                  placeholder="User Name"
-                 formControlName="userName"/>
+                 formControlName="username_inv"/>
         </div>
-        <div *ngIf="userName.invalid && userName.touched"
+        <div *ngIf="username_inv.invalid && username_inv.touched"
              class="text-danger">
           Sprint Name is required
         </div>
