listUS deleteUS updatePrio

--- a/GGHB/src/app/create-task/create-task.component.html
+++ b/GGHB/src/app/create-task/create-task.component.html
@@ -33,9 +33,9 @@
                id="taskState"
                placeholder="Choose a State"
                 formControlName="taskState">
-                <option value="todo">TODO</option>
-                <option value="doing">DOING</option>
-                <option value="done">DONE</option>
+                <option value="todo">Todo</option>
+                <option value="doing">Doing</option>
+                <option value="done">Done</option>
                 </select>
             </div>
 
@@ -56,7 +56,7 @@
                               type="submit"
                               name="createTask"
                               (click)="submitCreateTaskForm()">
-                          Create Project
+                          Create Task
                       </button>
                       <button class="btn btn-secondary btn-sm"
                               type="reset"
