--- a/GGHB/src/app/listProjects/listProjects.component.html
+++ b/GGHB/src/app/listProjects/listProjects.component.html
@@ -12,7 +12,14 @@
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Description</th>
-
       </tr>
-    </thead>
+        </thead>
+      <tbody>
+             <!--tr *ngFor="let p of projects">
+               <td></td>
+                <td>{{p.project}}</td>
+                  <td> {{p.description}}</td>
+          </tr-->
+      </tbody>
+
   </table>
