réparation commit précédent (problèmes de routes)

--- a/GGHB/src/app/create-us/create-us.component.html
+++ b/GGHB/src/app/create-us/create-us.component.html
@@ -59,9 +59,8 @@
                id="usState"
                placeholder="Choose a State"
                 formControlName="usState">
-                <option value="todo">TODO</option>
-                <option value="doing">DOING</option>
-                <option value="done">DONE</option>
+                <option value="todo">Todo</option>
+                <option value="done">Done</option>
                 </select>
             </div>
 
@@ -70,7 +69,7 @@
                               type="submit"
                               name="createUs"
                               (click)="submitCreateUsForm()" routerLink="/project">
-                          Create Project
+                          Create Us
                       </button>
                       <button class="btn btn-secondary btn-sm"
                               type="reset"
