--- a/GGHB/src/app/invite-to-project/invite-to-project.component.html
+++ b/GGHB/src/app/invite-to-project/invite-to-project.component.html
@@ -5,18 +5,6 @@
         [formGroup]="inviteToProjectForm">
     <div class="form-group">
       <div class="form-group">
-        <input type="text"
-               name="projectName"
-               id="projectName"
-               class="form-control"
-               placeholder="Project Name"
-               formControlName="projectName"/>
-      </div>
-      <div *ngIf="projectName.invalid && projectName.touched"
-           class="text-danger">
-        Project Name is required
-      </div>
-      <div class="form-group">
         <div class="form-group">
           <input type="text"
                  name="username_inv"
@@ -27,7 +15,7 @@
         </div>
         <div *ngIf="username_inv.invalid && username_inv.touched"
              class="text-danger">
-          Sprint Name is required
+          Username is required
         </div>
         <button type="submit" class="btn btn-default" (click)="submitInviteToProjectForm()"> Save</button>
         <button type="reset" class="btn btn-default">Reset</button>
