liste sprints fonctionnelle avec projet courant

--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -28,7 +28,7 @@
                      name="description"
                       id="projectDescription"
                       rows="3"
-                      placeholder="Enter a short desciption of your project"
+                      placeholder="Enter a short description of your project"
                       formControlName="projectDescription" >
                     </textarea>
                   </div>
