--- a/GGHB/src/app/list-sprints/list-sprints.component.html
+++ b/GGHB/src/app/list-sprints/list-sprints.component.html
@@ -1,5 +1,5 @@
 <div class="container" align="Center">
-  <button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/createSprint">
+  <button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/createSprint/">
     Create a new sprint
   </button>
 </div>
