--- a/GGHB/src/app/create-sprint/create-sprint.component.html
+++ b/GGHB/src/app/create-sprint/create-sprint.component.html
@@ -5,18 +5,6 @@
         [formGroup]="createSprintForm">
     <div class="form-group">
       <div class="form-group">
-        <input type="text"
-               name="projectName"
-               id="projectName"
-               class="form-control"
-               placeholder="Project Name"
-               formControlName="projectName"/>
-      </div>
-      <div *ngIf="projectName.invalid && projectName.touched"
-           class="text-danger">
-        Project Name is required
-      </div>
-      <div class="form-group">
         <div class="form-group">
           <input type="text"
                  name="sprintName"
@@ -38,7 +26,7 @@
                    placeholder="Nb Sprint"
                    formControlName="nbSprint"/>
           </div>
-          <div *ngIf="sprintName.touched"
+          <div *ngIf="nbSprint.touched"
                class="text-danger">
             An integer is required
           </div>
