--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -40,7 +40,8 @@
                       <button class="btn btn-primary btn-sm"
                               type="submit"
                               name="createProject"
-                              (click)="submitCreateProjectForm()">
+                              (click)="submitCreateProjectForm()"
+                              id="create">
                           Create Project
                       </button>
                       <button class="btn btn-secondary btn-sm"
