--- a/GGHB/src/app/header/header.component.html
+++ b/GGHB/src/app/header/header.component.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <label>User Name : </label>
-                <input type="text" placeholder="Enter your userName" class="form-control" name="userName" formControlName="userName" />
+                <input type="text" placeholder="Enter your userName" class="form-control" name="userName" formControlName="userName" id="username_co" />
             </div>
             <div class="form-group">
                 <div *ngIf="password.invalid && password.touched" class="text-danger">
@@ -33,10 +33,10 @@
                     </div>
                 </div>
                 <label>Password : </label>
-                <input type="password" placeholder="Enter your password" class="form-control" name="password" formControlName="password"
+                <input type="password" placeholder="Enter your password" class="form-control" name="password" formControlName="password" id="password_co"
                 />
             </div>
-            <button (click)="submitLoginForm()" class="btn btn-primary">Sign In</button>
+            <button (click)="submitLoginForm()" class="btn btn-primary" id="logIn">Sign In</button>
         </form>
 
         <form *ngIf="userConnected" class="form-inline" novalidate [formGroup]="loginForm">
