--- a/GGHB/src/app/home/home.component.html
+++ b/GGHB/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                                     UserName is required for registration
                                 </div>
                             </div>
-                            <input type="text" name="userName" class="form-control" placeholder="User Name" formControlName="userName" />
+                            <input type="text" name="userName" class="form-control" placeholder="User Name" formControlName="userName" id="username_inscr" />
                         </div>
                     </div>
 
@@ -21,7 +21,7 @@
                                 Password is required for registration
                             </div>
                         </div>
-                        <input type="password" name="password" class="form-control" placeholder="Password" formControlName="password" />
+                        <input type="password" name="password" class="form-control" placeholder="Password" formControlName="password" id="password_inscr" />
                     </div>
 
                     <div class="form-group">
@@ -30,12 +30,12 @@
                                 You must Confirm your password
                             </div>
                         </div>
-                        <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword"
+                        <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword" id="rPassword_inscr"
                         />
                     </div>
 
                     <div align="center">
-                        <button class="btn btn-primary btn-lg" type="submit" name="createAccount" (click)="submitSignUpForm()">
+                        <button class="btn btn-primary btn-lg" type="submit" name="createAccount" (click)="submitSignUpForm()" id="signUp">
                           Sign Up
                       </button>
                         <button class="btn btn-secondary btn-lg" type="reset" name="reset" (click)="reset()">
