--- a/GGHB/src/app/invite-to-project/invite-to-project.component.html
+++ b/GGHB/src/app/invite-to-project/invite-to-project.component.html
@@ -1,4 +1,7 @@
 <div class="container py-3">
+  <button class="btn btn-default" type="submit" name="project" routerLink="/project/">
+    Get back to project
+  </button>
   <h2>Invite Someone to A Project</h2>
   <form class="formGroup"
         novalidate
