--- a/GGHB/src/app/list-sprints/list-sprints.component.html
+++ b/GGHB/src/app/list-sprints/list-sprints.component.html
@@ -2,6 +2,9 @@
   <button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/createSprint/">
     Create a new sprint
   </button>
+  <button class="btn btn-default" type="submit" name="project" routerLink="/project/">
+    Get back to project
+  </button>
 </div>
 
 <table class="table table-bordered">
