--- a/GGHB/src/app/project/project.component.html
+++ b/GGHB/src/app/project/project.component.html
@@ -2,8 +2,11 @@
 <br/>
 <div class="container" align="Center">
 <button class="btn btn-default" type="submit" name="createNewUs" routerLink="/createUs"> Create a new us </button>
-<button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/createSprint"> Create a new sprint </button>
+<button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/listSprints"> Access to list of sprints </button>
 <button class="btn btn-default" type="submit" name="invite" routerLink="/inviteToProject"> Invite a contributor </button>
+  <button class="btn btn-default" type="submit" name="listProjects" routerLink="/listProjects/">
+    Get back to list of projects
+  </button>
 </div>
 <br/>
 <div class="container" align="Center">
