--- a/GGHB/src/app/create-sprint/create-sprint.component.html
+++ b/GGHB/src/app/create-sprint/create-sprint.component.html
@@ -17,7 +17,7 @@
              class="text-danger">
           Sprint Name is required
         </div>
-        <div class="form-group">
+        <!--div class="form-group">
           <div class="form-group">
             <input type="number"
                    name="nbSprint"
@@ -30,7 +30,8 @@
                class="text-danger">
             An integer is required
           </div>
-        </div>
+        </div-->
+
         <div class="form-group">
           <div class="form-group">
             <input type="date"
@@ -57,4 +58,3 @@
     </div>
   </form>
 </div>
-
