--- a/GGHB/src/app/create-sprint/create-sprint.component.html
+++ b/GGHB/src/app/create-sprint/create-sprint.component.html
@@ -17,7 +17,7 @@
              class="text-danger">
           Sprint Name is required
         </div>
-        <!--div class="form-group">
+        <div class="form-group">
           <div class="form-group">
             <input type="number"
                    name="nbSprint"
@@ -26,12 +26,7 @@
                    placeholder="Nb Sprint"
                    formControlName="nbSprint"/>
           </div>
-          <div *ngIf="nbSprint.touched"
-               class="text-danger">
-            An integer is required
-          </div>
-        </div-->
-
+        </div>
         <div class="form-group">
           <div class="form-group">
             <input type="date"
@@ -50,7 +45,7 @@
                      placeholder="End Date"
                      formControlName="dateEnd"/>
             </div>
-            <button type="submit" class="btn btn-default" (click)="submitCreateSprintForm()"> Save</button>
+            <button type="submit" class="btn btn-default" routerLink="/listSprints" (click)="submitCreateSprintForm()"> Save</button>
             <button type="reset" class="btn btn-default">Reset</button>
           </div>
         </div>
