Changement de nom du bouton Go back + suppression du code commenté en back qui sert à rien

--- a/GGHB/src/app/create-us/create-us.component.html
+++ b/GGHB/src/app/create-us/create-us.component.html
@@ -1,6 +1,6 @@
 <div class="container py-3">
   <button class="btn btn-default" type="submit" name="project" routerLink="/project/">
-    Get back to project
+    Go back to project
   </button>
   <div class="row">
       <div class="col-md-6 col-lg-4 mx-auto">
