--- a/GGHB/src/app/list-sprints/list-sprints.component.html
+++ b/GGHB/src/app/list-sprints/list-sprints.component.html
@@ -3,7 +3,7 @@
     Create a new sprint
   </button>
   <button class="btn btn-default" type="submit" name="project" routerLink="/project/">
-    Get back to project
+    Go back to project
   </button>
 </div>
 
