--- a/GGHB/src/app/project/project.component.html
+++ b/GGHB/src/app/project/project.component.html
@@ -5,7 +5,7 @@
 <button class="btn btn-default" type="submit" name="createNewSprint" routerLink="/listSprints"> Access to list of sprints </button>
 <button class="btn btn-default" type="submit" name="invite" routerLink="/inviteToProject"> Invite a contributor </button>
   <button class="btn btn-default" type="submit" name="listProjects" routerLink="/listProjects/">
-    Get back to list of projects
+    Go back to list of projects
   </button>
 </div>
 <br/>
