--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -40,6 +40,7 @@
                       <button class="btn btn-primary btn-sm"
                               type="submit"
                               name="createProject"
+                              routerLink="/listProjects"
                               (click)="submitCreateProjectForm()"
                               id="create">
                           Create Project
