--- a/GGHB/src/app/invite-to-project/invite-to-project.component.html
+++ b/GGHB/src/app/invite-to-project/invite-to-project.component.html
@@ -20,7 +20,7 @@
              class="text-danger">
           Username is required
         </div>
-        <button type="submit" class="btn btn-default" (click)="submitInviteToProjectForm()"> Save</button>
+        <button type="submit" class="btn btn-default" routerLink="/listProjects" (click)="submitInviteToProjectForm()"> Save</button>
         <button type="reset" class="btn btn-default">Reset</button>
       </div>
     </div>
