Résolution du probleme des boutons reset

--- a/GGHB/src/app/create-project/create-project.component.html
+++ b/GGHB/src/app/create-project/create-project.component.html
@@ -48,7 +48,7 @@
                       <button class="btn btn-secondary btn-sm"
                               type="reset"
                               name="reset"
-                              (click)="reset()">
+                              (click)="reset">
                           Reset
                       </button>
                   </div>
