--- a/GGHB/src/app/create-task/create-task.component.html
+++ b/GGHB/src/app/create-task/create-task.component.html
@@ -61,7 +61,7 @@
                       <button class="btn btn-secondary btn-sm"
                               type="reset"
                               name="reset"
-                              (click)="reset()">
+                              (click)="reset">
                           Reset
                       </button>
                   </div>
