--- a/GGHB/src/app/create-us/create-us.component.html
+++ b/GGHB/src/app/create-us/create-us.component.html
@@ -77,7 +77,7 @@
                       <button class="btn btn-secondary btn-sm"
                               type="reset"
                               name="reset"
-                              (click)="reset()">
+                              (click)="reset">
                           Reset
                       </button>
                   </div>
