--- a/GGHB/src/app/home/home.component.html
+++ b/GGHB/src/app/home/home.component.html
@@ -38,7 +38,7 @@
                         <button class="btn btn-primary btn-lg" type="submit" name="createAccount" (click)="submitSignUpForm()" id="signUp">
                           Sign Up
                       </button>
-                        <button class="btn btn-secondary btn-lg" type="reset" name="reset" (click)="reset()">
+                        <button class="btn btn-secondary btn-lg" type="reset" name="reset" (click)="reset">
                           Reset
                       </button>
                     </div>
