--- a/GGHB/src/app/create-task/create-task.component.html
+++ b/GGHB/src/app/create-task/create-task.component.html
@@ -55,7 +55,7 @@
                       <button class="btn btn-primary btn-sm"
                               type="submit"
                               name="createTask"
-                              (click)="submitCreateTaskForm()">
+                              (click)="submitCreateTaskForm()" routerLink="/listTasks">
                           Create Task
                       </button>
                       <button class="btn btn-secondary btn-sm"
